[package]
name = "farming-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1" }
cosmwasm-schema = "1.1.6"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = { version = "1.0.23" }
schemars = "0.8.11"